--- a/teamProject/src/main/webapp/index.html
+++ b/teamProject/src/main/webapp/index.html
@@ -324,8 +324,7 @@
                         <a href="#"> <i class="ti-user mr-2"></i>25 </a>
                       </span>
                       <span class="meta_info"
-                        ><a href="#"> <i class="ti-heart mr-2"></i>35 </a></span
-                      >
+                        ><a href="#"> <i class="ti-heart mr-2"></i>35 </a></span>
                     </div>
                   </div>
                 </div>
